# VulkanNDK

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/appnativa/vulkanndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VulkanMain.cpp  native-lib.cpp
app/src/main/java/com/appnativa/vulkanndk/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/appnativa/vulkanndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
